--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Playlist Project</title>
+    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
-      
+    <div class="main-container">
+      <div class="btn-col">
+        <div class="btn-container">
+          <p>track bin</p>
+          <div class="btn">choose tracks</div>
+        </div>
+      </div><div class="img-col">
+        <div></div>
+        <img>
+        <div></div>
+        <img>
+        <div></div>
+        <img>
+        <div></div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>© 2017 Cameron Earl</p>
+    </div>
 
   </body>
+  <script type="text/javascript" src='./js/main.js'></script>
 </html>
