--- a/index.html
+++ b/index.html
@@ -4,28 +4,33 @@
     <meta charset="utf-8">
     <title>Playlist Project</title>
     <link rel="stylesheet" href="./css/master.css">
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
-    <div class="main-container">
-      <div class="btn-col">
-        <div class="btn-container">
-          <p>track bin</p>
-          <div class="btn">choose tracks</div>
+    <div class="page-container">
+      <div class="header"></div>
+      <div class="content-container">
+        <div class="btn-col">
+          <div class="btn-container">
+            <p>track bin</p>
+            <a href="playlist.html"><div class="btn">choose tracks</div></a>
+          </div>
+        </div><div class="img-col">
+          <div></div>
+          <img>
+          <div></div>
+          <img>
+          <div></div>
+          <img>
+          <div></div>
         </div>
-      </div><div class="img-col">
-        <div></div>
-        <img>
-        <div></div>
-        <img>
-        <div></div>
-        <img>
-        <div></div>
       </div>
-    </div>
-    <div class="footer">
-      <p>© 2017 Cameron Earl</p>
+      <div class="footer"></div>
     </div>
 
+
+    <script type="text/javascript" src='./js/main.js'></script>
+    <script type="text/javascript" src='./js/index.js'></script>
   </body>
-  <script type="text/javascript" src='./js/main.js'></script>
+
 </html>
